--- a/covid19sims/about/index.html
+++ b/covid19sims/about/index.html
@@ -38,9 +38,9 @@
         <div id="content">
           <div id="content-inner">
             <div>
-              <h2>Home</h2>
+              <h2>About</h2>
               <p>
-                The landing page. Do we want a landing page? Should the 'home page' just be the national level analysis?
+                What do we want here. Link to the pre-print probably. Maybe a summary of the methodology. Maybe contact info/emails?
               </p>
             </div>
           </div>
