--- a/covid19sims/provinces/index.html
+++ b/covid19sims/provinces/index.html
@@ -38,9 +38,12 @@
         <div id="content">
           <div id="content-inner">
             <div>
-              <h2>Home</h2>
+              <h2>Provinces</h2>
               <p>
-                The landing page. Do we want a landing page? Should the 'home page' just be the national level analysis?
+                Eventually I'm imagining a map of Canada, click on a province and it takes you there.
+              </p>
+              <p>
+                To start maybe just a list of links. <a href="ontario.html" title="Ontario">Ontario</a>.
               </p>
             </div>
           </div>
