--- a/covid19sims/about/index.html
+++ b/covid19sims/about/index.html
@@ -37,21 +37,18 @@
 
         <div id="content">
           <div id="content-inner">
-            <div>
-              <h2>About</h2>
-              <p>
-                What do we want here. Link to the pre-print probably. Maybe a summary of the methodology. Maybe contact info/emails?
-              </p>
-            </div>
+            <h2>About</h2>
+<p>
+  What do we want here. Link to the pre-print probably. Maybe a summary of the methodology. Maybe contact info/emails?
+</p>
+
           </div>
         </div>
         <div id="footer">
           <div id="footer-inner">
-            <p>
-              Disclaimer:
-            </p>
+            <p>DISCLAIMER: Disclaimer here.</p>
+
           </div>
         </div>
   </body>
 </html>
-
