--- a/covid19sims/index.html
+++ b/covid19sims/index.html
@@ -37,21 +37,18 @@
 
         <div id="content">
           <div id="content-inner">
-            <div>
-              <h2>Home</h2>
-              <p>
-                The landing page. Do we want a landing page? Should the 'home page' just be the national level analysis?
-              </p>
-            </div>
+            <h2>Home</h2>
+<p>
+  The landing page. Do we want a landing page? Should the 'home page' just be the national level analysis?
+</p>
+
           </div>
         </div>
         <div id="footer">
           <div id="footer-inner">
-            <p>
-              Disclaimer:
-            </p>
+            <p>DISCLAIMER: Disclaimer here.</p>
+
           </div>
         </div>
   </body>
 </html>
-
