--- a/covid19sims/provinces/index.html
+++ b/covid19sims/provinces/index.html
@@ -37,32 +37,31 @@
 
         <div id="content">
           <div id="content-inner">
-            <div>
-              <h2>Canadian Provinces and Territories</h2>
-              <p>While the model was initially developed with the provinces of <a href="ontario.html" title="Ontario">Ontario</a> and <a href="quebec.html" title="Quebec">Quebec</a> specifically in mind, we apply the same methodology to other Canadian provinces and territories on this website. A full list of links to Canadian provinces and territories are provided below.
-              </p>
-              <ul>
-                <li><a href="bc.html" title="British Columbia">British Columbia</a></li>
-                <li><a href="alberta.html" title="Alberta">Alberta</a></li>
-                <li><a href="saskatchewan.html" title="Saskatchewan">Saskatchewan</a></li>
-                <li><a href="manitoba.html" title="Manitoba">Manitoba</a></li>
-                <li><a href="ontario.html" title="Ontario">Ontario</a></li>
-                <li><a href="quebec.html" title="Quebec">Quebec</a></li>
-                <li><a href="novascotia.html" title="Nova Scotia">Nova Scotia</a></li>
-                <li><a href="nb.html" title="New Brunswick">New Brunswick</a></li>
-                <li><a href="pei.html" title="Prince Edward Island">Prince Edward Island</a></li>
-                <li><a href="newfoundland.html" title="Newfoundland and Labrador">Newfoundland and Labrador</a></li>
-                <li><a href="nwt.html" title="Northwest Territories">Northwest Territories</a></li>
-                <li><a href="yukon.html" title="Yukon">Yukon</a></li>
-                <li><a href="nunavut.html" title="Nunavut">Nunavut</a></li>
-            </div>
+            <h2>Canadian Provinces and Territories</h2>
+<p>While the model was initially developed with the provinces of <a href="ontario.html" title="Ontario">Ontario</a> and <a href="quebec.html" title="Quebec">Quebec</a> specifically in mind, we apply the same methodology to other Canadian provinces and territories on this website. A full list of links to Canadian provinces and territories are provided below.
+</p>
+<ul>
+  <li><a href="bc.html" title="British Columbia">British Columbia</a></li>
+  <li><a href="alberta.html" title="Alberta">Alberta</a></li>
+  <li><a href="saskatchewan.html" title="Saskatchewan">Saskatchewan</a></li>
+  <li><a href="manitoba.html" title="Manitoba">Manitoba</a></li>
+  <li><a href="ontario.html" title="Ontario">Ontario</a></li>
+  <li><a href="quebec.html" title="Quebec">Quebec</a></li>
+  <li><a href="novascotia.html" title="Nova Scotia">Nova Scotia</a></li>
+  <li><a href="nb.html" title="New Brunswick">New Brunswick</a></li>
+  <li><a href="pei.html" title="Prince Edward Island">Prince Edward Island</a></li>
+  <li><a href="newfoundland.html" title="Newfoundland and Labrador">Newfoundland and Labrador</a></li>
+  <li><a href="nwt.html" title="Northwest Territories">Northwest Territories</a></li>
+  <li><a href="yukon.html" title="Yukon">Yukon</a></li>
+  <li><a href="nunavut.html" title="Nunavut">Nunavut</a></li>
+</ul>
+
           </div>
         </div>
         <div id="footer">
           <div id="footer-inner">
-            <p>
-              Disclaimer:
-            </p>
+            <p>DISCLAIMER: Disclaimer here.</p>
+
           </div>
         </div>
   </body>
