--- a/covid19sims/about/index.html
+++ b/covid19sims/about/index.html
@@ -39,8 +39,14 @@
           <div id="content-inner">
             <h2>About</h2>
 <p>
-  What do we want here. Link to the pre-print probably. Maybe a summary of the methodology. Maybe contact info/emails?
+  What do we want here? Here are some ideas (no particular order, anyone who wants to start writing copy for this, go ahead!)
 </p>
+<ul>
+  <li>Link to the pre-print?</li>
+  <li>Maybe a summary of the methodology</li>
+  <li>Maybe contact info/emails for us?</li>
+  <li>Maybe a bit on model assumptions/limitations?</li>
+</ul>
 
           </div>
         </div>
