--- a/covid19sims/about/index.html
+++ b/covid19sims/about/index.html
@@ -47,12 +47,13 @@
   <li>Maybe contact info/emails for us?</li>
   <li>Maybe a bit on model assumptions/limitations?</li>
 </ul>
+<p>If anyone wants to edit this content, download <a href="/covid19sims/content/about_content.html">this file</a> (right click and hit 'Save-Link-As' or similar) and write whatever you want. You can include any HTML tags you want. If you need any help with HTML tags, just email me (Brydon). When you're done, just email me the edited file and I can include it on the site. </p>
 
           </div>
         </div>
         <div id="footer">
           <div id="footer-inner">
-            <p>DISCLAIMER: Disclaimer here.</p>
+            <p>DISCLAIMER: Disclaimer here. (Anyone got any particular wording they like?)</p>
 
           </div>
         </div>
