--- a/covid19sims/content/homepage_content.html
+++ b/covid19sims/content/homepage_content.html
@@ -1,4 +1,3 @@
 <h2>Home</h2>
-<p>The landing page. Do we want a landing page? Should the 'home page' just be the national level analysis?</p>
-<p>If we have a landing page, maybe it just explains what's happening on the site, explaining what the site is meant to do (give you a way to simulate trajectories and try out different social distancing prescriptions.)</p>
-<p>If anyone wants to edit this content, download <a href="/covid19sims/content/homepage_content.html">this file</a> (right click and hit 'Save-Link-As' or similar) and write whatever you want. You can include any HTML tags you want. If you need any help with HTML tags, just email me (Brydon). When you're done, just email me the edited file and I can include it on the site. </p>
+<p>Welcome to the Canadian COVID-19 Forecasts web app. National and provincial level mathematical modelling of the COVID-19 pandemic is performed here with options for the user to analyze different social distancing strategies. Select from the tabs above to view the different forecasts or choose ‘about’ to see methodology and further details.</p>
+<p>The people behind this website are researchers in the <a href="https://uwaterloo.ca/applied-mathematics/" title="University of Waterloo Applied Mathematics">University of Waterloo’s department of Applied Mathematics</a>. </p>
