--- a/covid19sims/content/defaults/preamble.html
+++ b/covid19sims/content/defaults/preamble.html
@@ -1,2 +1,3 @@
-<h2>COVID-19 Simulations</h2>
-<p>Preamble text here. What do we want to see?</p>
+<h2>@@PROVNAME@@ COVID-19 Simulations</h2>
+<p>This page contains forecasting of the COVID-19 pandemic for the province of @@PROVNAME@@. Starred points on the figures represent real data points as reported by <a href="https://github.com/CSSEGISandData/COVID-19" title="Johns Hopkins CSSE">the Center for Systems Science and Engineering at Johns Hopkins University</a>. Solid lines represent the projection of the pandemic data as predicted by the mathematical model.</p>
+<p>Below, the social distancing strategy can be specified by choosing the proportion of people adhering to social distancing, the time when social distancing began, and the length of time for which social distancing lasts. The start time is relative to the real date when social distancing began in @@PROVNAME@@.</p>
