HR Border, Typos

--- a/covid19sims/index.html
+++ b/covid19sims/index.html
@@ -41,12 +41,12 @@
 <p>Welcome to the Canadian COVID-19 Forecasts web app. National and provincial level mathematical modelling of the COVID-19 pandemic is performed here with options for the user to analyze different social distancing strategies. Select from the tabs above to view the different forecasts or choose ‘about’ to see methodology and further details.</p>
 <p>The people behind this website are researchers in the <a href="https://uwaterloo.ca/applied-mathematics/" title="University of Waterloo Applied Mathematics">University of Waterloo’s department of Applied Mathematics</a>. </p>
 
+            <hr>
           </div>
-          <hr>
         </div>
         <div id="footer">
           <div id="footer-inner">
-            <p>The information contained here is obtained through mathematical modelling based on imperfect or incomplete information. We stress that mathematical models are not perfect and are only as accurate as the information on which they are based. Accordingly, we encourage readers to examine the about section for information on limitations and further information. We claim no responsibility for the results of any decisions made based on the information contained here.</p>
+            <p id="disclaimer">Disclaimer: The information contained in this site is obtained through mathematical modelling based on imperfect or incomplete information. We stress that mathematical models are not perfect and are only as accurate as the information on which they are based. Accordingly, we encourage readers to examine the about section for information on limitations and further information. We claim no responsibility for the results of any decisions made based on the information contained here.</p>
 
           </div>
         </div>
