--- a/covid19sims/about/index.html
+++ b/covid19sims/about/index.html
@@ -49,12 +49,12 @@
 </ul>
 <p>If anyone wants to edit this content, download <a href="/covid19sims/content/about_content.html">this file</a> (right click and hit 'Save-Link-As' or similar) and write whatever you want. You can include any HTML tags you want. If you need any help with HTML tags, just email me (Brydon). When you're done, just email me the edited file and I can include it on the site. </p>
 
+            <hr>
           </div>
-          <hr>
         </div>
         <div id="footer">
           <div id="footer-inner">
-            <p>The information contained here is obtained through mathematical modelling based on imperfect or incomplete information. We stress that mathematical models are not perfect and are only as accurate as the information on which they are based. Accordingly, we encourage readers to examine the about section for information on limitations and further information. We claim no responsibility for the results of any decisions made based on the information contained here.</p>
+            <p id="disclaimer">Disclaimer: The information contained in this site is obtained through mathematical modelling based on imperfect or incomplete information. We stress that mathematical models are not perfect and are only as accurate as the information on which they are based. Accordingly, we encourage readers to examine the about section for information on limitations and further information. We claim no responsibility for the results of any decisions made based on the information contained here.</p>
 
           </div>
         </div>
