--- a/covid19sims/content/defaults/postamble.html
+++ b/covid19sims/content/defaults/postamble.html
@@ -1,1 +1,3 @@
-<p>&nbsp;</p>
+<div style="background-color:#F00;color:#FFF">
+  Warning: The Data presented above are just simulations with artificially chosen parameters as a proof of concept.
+</div>
