--- a/covid19sims/content/preamble_canada.html
+++ b/covid19sims/content/preamble_canada.html
@@ -1,3 +1,6 @@
 <h2>National COVID-19 Simulations</h2>
 <p>This page contains forecasting of the COVID-19 pandemic for the whole of Canada. Starred points on the figures represent real data points as reported by <a href="https://github.com/CSSEGISandData/COVID-19" title="Johns Hopkins CSSE">the Center for Systems Science and Engineering at Johns Hopkins University</a>. Solid lines represent the projection of the pandemic data as predicted by the mathematical model.</p>
 <p>Below, the social distancing strategy can be specified by choosing the proportion of people adhering to social distancing, the time when social distancing began, and the length of time for which social distancing lasts. </p>
+<div style="background-color:#F00;color:#FFF">
+  Warning: The Data presented below are just simulations with artificially chosen parameters as a proof of concept.
+</div>
